@@ -1,76 +1,138 @@
 package com.deskit.deskit.common.config;
 
-import java.util.List;
+import com.deskit.deskit.account.jwt.CustomLogoutFilter;
+import com.deskit.deskit.account.jwt.JWTFilter;
+import com.deskit.deskit.account.jwt.JWTUtil;
+import com.deskit.deskit.account.oauth.CustomSuccessHandler;
+import com.deskit.deskit.account.repository.RefreshRepository;
+import com.deskit.deskit.account.service.CustomOAuth2UserService;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.access.AccessDeniedHandler;
-import org.springframework.security.web.authentication.HttpStatusEntryPoint;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.authentication.logout.LogoutFilter;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Collections;
 
 @Configuration
+@EnableWebSecurity
 public class SecurityConfig {
 
-  @Bean
-  public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-    http
-            // 프론트(5174)에서 /api 호출할 때 CORS 허용
-            .cors(Customizer.withDefaults())
+    private final CustomOAuth2UserService customOAuth2UserService;
+    private final CustomSuccessHandler customSuccessHandler;
+    private final JWTUtil jwtUtil;
+    private final RefreshRepository refreshRepository;
+    public SecurityConfig(CustomOAuth2UserService customOAuth2UserService,
+                          CustomSuccessHandler customSuccessHandler,
+                          JWTUtil jwtUtil,
+                          RefreshRepository refreshRepository) {
 
-            // API는 CSRF 토큰 없이도 호출 가능하도록 예외 처리
-            .csrf(csrf -> csrf.ignoringRequestMatchers("/api/**"))
+        this.customOAuth2UserService = customOAuth2UserService;
+        this.customSuccessHandler = customSuccessHandler;
+        this.jwtUtil = jwtUtil;
+        this.refreshRepository = refreshRepository;
+    }
 
-            // 접근 권한 설정
-            .authorizeHttpRequests(auth -> auth
-                    // 프리플라이트(OPTIONS)는 항상 허용
-                    .requestMatchers(HttpMethod.OPTIONS, "/api/**").permitAll()
-                    // 상품/셋업 조회 GET은 로그인 없이 허용
-                    // 로그인/OAuth/에러 페이지는 허용
-                    .requestMatchers("/login**", "/oauth2/**", "/error").permitAll()
-                    // 나머지는 인증 필요
-                    .anyRequest().authenticated())
+    @Bean
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
-            // API 요청에서 인증/권한 오류를 "리다이렉트" 대신 HTTP 상태코드로 내려주기
-            .exceptionHandling(exceptions -> exceptions
-                    // 인증 안 된 상태로 /api/** 접근하면 401
-                    .defaultAuthenticationEntryPointFor(
-                            new HttpStatusEntryPoint(HttpStatus.UNAUTHORIZED),
-                            new AntPathRequestMatcher("/api/**"))
-                    // 권한 부족으로 /api/** 접근하면 403
-                    .defaultAccessDeniedHandlerFor(
-                            accessDeniedHandler(),
-                            new AntPathRequestMatcher("/api/**")))
+        http
+                .cors(corsCustomizer -> corsCustomizer.configurationSource(new CorsConfigurationSource() {
 
-            // OAuth2 로그인 사용
-            .oauth2Login(Customizer.withDefaults());
+                    @Override
+                    public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
 
-    return http.build();
-  }
+                        CorsConfiguration configuration = new CorsConfiguration();
 
-  @Bean
-  public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration configuration = new CorsConfiguration();
-    // dev 프론트 origin 허용
-    configuration.setAllowedOrigins(List.of("http://localhost:5174"));
-    configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    configuration.setAllowedHeaders(List.of("*"));
-    // 세션 쿠키(예: JSESSIONID) 사용 가능
-    configuration.setAllowCredentials(true);
+                        configuration.setAllowedOrigins(Collections.singletonList("http://localhost:5173"));
+                        configuration.setAllowedMethods(Collections.singletonList("*"));
+                        configuration.setAllowCredentials(true);
+                        configuration.setAllowedHeaders(Collections.singletonList("*"));
+                        configuration.setMaxAge(3600L);
 
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/api/**", configuration);
-    return source;
-  }
+                        configuration.setExposedHeaders(
+                                java.util.List.of("Set-Cookie", "Authorization", "access")
+                        );
 
-  private AccessDeniedHandler accessDeniedHandler() {
-    return (request, response, accessDeniedException) ->
-            response.sendError(HttpStatus.FORBIDDEN.value(), HttpStatus.FORBIDDEN.getReasonPhrase());
-  }
+                        return configuration;
+                    }
+                }));
+
+        //csrf disable
+        http
+                .csrf((auth) -> auth.disable());
+
+        //From 로그인 방식 disable
+        http
+                .formLogin((auth) -> auth.disable());
+
+        //HTTP Basic 인증 방식 disable
+        http
+                .httpBasic((auth) -> auth.disable());
+
+        http
+                .exceptionHandling(exception -> exception
+                        .defaultAuthenticationEntryPointFor(
+                                (request, response, authException) -> {
+                                    response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                                    response.setContentType("application/json;charset=UTF-8");
+                                    response.getWriter().write("{\"message\":\"인증이 필요합니다\"}");
+                                },
+                                new AntPathRequestMatcher("/api/**") // API만
+                        )
+                );
+
+        //JWTFilter 추가
+        http
+                .addFilterBefore(new JWTFilter(jwtUtil), UsernamePasswordAuthenticationFilter.class);
+
+        http
+                .addFilterBefore(new CustomLogoutFilter(jwtUtil, refreshRepository), LogoutFilter.class);
+
+        //oauth2
+        http
+                .oauth2Login((oauth2) -> oauth2
+                        .userInfoEndpoint((userInfoEndpointConfig) -> userInfoEndpointConfig
+                                .userService(customOAuth2UserService))
+                        .successHandler(customSuccessHandler)
+                );
+
+        //경로별 인가 작업
+        http
+                .authorizeHttpRequests((auth) -> auth
+                        .requestMatchers(
+                                "/",
+                                "/chat",
+                                "/chat/**",
+                                "/reissue",
+                                "/api/invitations/validate",
+                                "/oauth/**",
+                                "/login",
+                                "/login/**",
+                                "/login/oauth2/**"
+                        ).permitAll()
+                        .requestMatchers("/my").hasAnyAuthority(
+                                "ROLE_MEMBER",
+                                "ROLE_SELLER",
+                                "ROLE_SELLER_OWNER",
+                                "ROLE_SELLER_MANAGER",
+                                "ROLE_ADMIN"
+                        )
+                        .anyRequest().authenticated());
+
+        //세션 설정 : STATELESS -> IF_REQUIRED
+        http
+                .sessionManagement((session) -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED));
+
+        return http.build();
+    }
 }
